# language_tool_python

./: .gitignore  .hgignore  .hgtags  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  3to2.py  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  README.rst  SECURITY.md  _3to2.py  app.py  build_and_publish.sh  download_lt.py  extract_long_description.py  language-check  language-tool  make.bat  pyproject.toml  pytest.ini  requirements.txt  run_doctest.py  setup.cfg  setup.py  setup_language_tool.py  test.bash  test.py  test_local.bash  test_remote.bash  tox.ini
.github/: CODE_OF_CONDUCT.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  question.md
.github/workflows/: codeql.yml  test.yml
docs/: requirements.txt
docs/assets/video/: language_tool_python_demo.tape  sample.txt
docs/source/: conf.py  index.rst
docs/source/references/: advanced.rst  cli.rst  config.rst  env_vars.rst  examples.rst  installation.rst  language_tool_python.rst  modules.rst
language_check/: __init__.py  __main__.py  main.py  which.py
language_check/backports/: subprocess.py
language_tool/: __init__.py  __main__.py  console_mode.py  country_codes.py  main.py  which.py
language_tool/backports/: ElementTree.py  subprocess.py
language_tool_python/: __init__.py  __main__.py  _compat.py  _deprecated.py  api_types.py  config_file.py  console_mode.py  download_lt.py  exceptions.py  integrity.toml  language_tag.py  logging.toml  main.py  match.py  safe_zip.py  server.py  utils.py  which.py
language_tool_python/_internals/: api_types.py  compat.py  safe_zip.py  utils.py
language_tool_python/backports/: subprocess.py
src/language_tool_python/: __main__.py  config_file.py  download_lt.py  exceptions.py  language_tag.py  match.py  server.py  utils.py
src/language_tool_python/_internals/: api_types.py  compat.py  safe_zip.py  utils.py
src/language_tool_python/_ressources/: integrity.toml
static/: script.js  style.css
templates/: index.html
tests/: __init__.py  easy_test.py  lang_tool_load_test.py  remote_test.py  spellcheck_test.py  test_api_public.py  test_cli.py  test_config.py  test_deprecated.py  test_download.py  test_local.bash  test_major_functionality.py  test_match.py  test_remote.bash  test_safe_zip.py  test_server_local.py
tests/benchmarks/: __init__.py  conftest.py  test_bench_check.py
tests/integration/: __init__.py  conftest.py  test_api_public.py  test_cli.py  test_config.py  test_download.py  test_match.py  test_server_local.py
tests/property/: __init__.py  conftest.py  test_prop_config.py  test_prop_language_tag.py  test_prop_safe_zip.py  test_prop_utils.py
tests/unit/: __init__.py  conftest.py  test_api_types.py  test_cli_args.py  test_cli_unit.py  test_config_unit.py  test_config_validation.py  test_download.py  test_download_unit.py  test_internals_utils.py  test_language_tag.py  test_match.py  test_safe_zip.py  test_server_unit.py  test_utils.py
typerfect/: __main__.py  config_file.py  match.py  server.py  utils.py
