[project]
name = "language_tool_python"
version = "2.9.5"
requires-python = ">=3.9"
description = "Checks grammar using LanguageTool."
readme = { file = "README.md", content-type = "text/markdown" }
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    { name = "Jack Morris", email = "jxmorris12@gmail.com" }
]
maintainers = [
    { name = "mdevolde", email = "martin.devolder2@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]
keywords = ["python", "nlp", "grammar", "languagetool", "grammar-checker", "spellchecker", "grammar-parser"]
urls = { Repository = "https://github.com/jxmorris12/language_tool_python.git" }

dependencies = [
    "requests",
    "tqdm",
    "packaging",
    "psutil",
    "toml"
]

[dependency-groups]
tests = [
    "pytest",
    "pytest-xdist",
    "pytest-cov",
    "pytest-runner"
]

docs = [
  "furo",
  "sphinx",
  "sphinx-design",
]

types = [
    "types-requests",
    "types-tqdm",
    "types-psutil",
    "types-toml",
]


[project.scripts]
language_tool_python = "language_tool_python.__main__:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { include = ["language_tool_python*"] } }

[tool.setuptools.package-data]
language_tool_python = ["py.typed"]

[tool.ruff.lint]
select = ["F", "W", "I", "B", "SIM", "RET", "Q"]

[tool.mypy]
files = ["language_tool_python"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
show_error_codes = true
pretty = true
disable_error_code = ["import-not-found", "import-untyped"]
