[metadata]
name=language-check
summary=Checks grammar using LanguageTool.
description-file=README.rst
home-page=https://github.com/myint/language-check
author=Steven Myint
classifier=
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages=
    language_check
    language_check.backports
package_data=
    language_check=
        LanguageTool*/*.*
        LanguageTool*/libs/*.*
        LanguageTool*/META-INF/*.*
        LanguageTool*/META-INF/maven/org.languagetool/*/*.*
        LanguageTool*/META-INF/org/languagetool/*.*
        LanguageTool*/org/*/*.*
        LanguageTool*/org/*/*/*.*
        LanguageTool*/org/*/*/*/*.*
        LanguageTool*/org/*/*/*/*/*.*
        LanguageTool*/org/*/*/*/*/*/*.*
        LanguageTool*/org/*/*/*/*/*/*/*.*
scripts=
    language-check
