[metadata]
name=language-check
summary=Checks grammar using LanguageTool.
description-file=README.rst
home-page=https://github.com/jxmorris12/language-tool-python
author=Jack Morris
classifier=
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages=
    language_check
    language_check.backports
package_data=
    language_check=
        LanguageTool*/*.*
        LanguageTool*/libs/*.*
        LanguageTool*/META-INF/*.*
        LanguageTool*/META-INF/maven/org.languagetool/*/*.*
        LanguageTool*/META-INF/org/languagetool/*.*
        LanguageTool*/org/*/*.*
        LanguageTool*/org/*/*/*.*
        LanguageTool*/org/*/*/*/*.*
        LanguageTool*/org/*/*/*/*/*.*
        LanguageTool*/org/*/*/*/*/*/*.*
        LanguageTool*/org/*/*/*/*/*/*/*.*
scripts=
    language-check
