[metadata]
name=language_tool_python
summary=Checks grammar using LanguageTool.
description-file=README.md
home-page=https://github.com/jxmorris12/language_tool_python
author=Jack Morris
classifier=
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages=
    language_tool_python
    language_tool_python.backports
package_data=